2023-03-14  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.6-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.6-alpha01: Baltimore';git push
	git tag -a 5.1.6-alpha01 -m 'Functionally identical to 5.1.5';git push --tags

	* Update supported netCDF library versions

	* NCO 5.1.5 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.5: Rhubarb Pi';git push
	git tag -a 5.1.5 -m 'all: tgl->abs, NCZarr chk drc, dnd rgl fl; ncrcat: no_cll_mth; ncremap eamxx pdq plev, CF, prs_stt_usr fix plev_nm, ps_rtn, mss_val var_lst_zmid';git push --tags

	* NCO 5.1.5-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.5-beta01: Heisler Picnic';git push
	git tag -a 5.1.5-beta01 -m 'all: tgl->abs, NCZarr chk drc, dnd rgl fl; ncrcat: no_cll_mth; ncremap eamxx pdq plev, CF, prs_stt_usr fix plev_nm, ps_rtn, mss_val var_lst_zmid';git push --tags

	* Document new features for 5.1.5

	* Peter Caldwell verifies roundtrip mss_val vertical interpolation works for him

2023-03-13  Charlie Zender  <zender@uci.edu>

	* Tweak NCZarr debug verbosity and information reported

	* NCO 5.1.5-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.5-alpha04: Rehab paddling';git push
	git tag -a 5.1.5-alpha04 -m 'all: Toggle->Absolute; ncremap ps_rtn, vrt mss_val';git push --tags

2023-03-12  Charlie Zender  <zender@uci.edu>

	* ncremap vertical interpolation on half-range missing values copies from valid value

2023-03-11  Charlie Zender  <zender@uci.edu>

	* ncremap add --ps_rtn flag

	* ncremap prevent vertical interpolation calculations from using missing values

2023-03-10  Charlie Zender  <zender@uci.edu>

	* Change toggle to absolute False for FL_LST_IN_APPEND, HISTORY_APPEND, RM_RMT_FL_PST_PRC switches

	* Change toggle to absolute True for FORTRAN_IDX_CNV switch

2023-03-09  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.5-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.5-alpha03: Blizzard';git push